infra/k8s/manifests/grafana-ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.mayorstacks.work`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-estate-tls
